Fixed font flicker

--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,13 @@ html {
   max-width: 100%;
   overflow-x: hidden;
   font-size: 16px;
-  font-size: 1.6rem;
 }
 
 body {
   font-family: 'Open Sans', "Helvetica Neue", sans-serif;
   font-weight: 300;
   color: #000000;
-  font-size: 16px;
-  font-size: 1.6rem;
+  font-size: 1rem;
 }
 
 h1, h2, h3, h4, h5 {
